--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <body>
     <div class="container">
     <center>
+        <a href="" id = "link" download = "Image.png"></a>
         <h1>Voice Selfie App 
 
         </h1>
